--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   </div>
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
-
+  
+  <script src="js/player.js"></script>
+  <script src="js/enemies.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
