--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <button id="start">START</button>
     </main>
   </div>
-
+    <div id = "win-page">
+      <main>
+        <h1>YOU WIN</h1>
+      </main>
+    </div>
     <div id="lose-page">
     <main>
       <h1>YOU LOSE SUCKER</h1>
