--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css"/>
-  <title>Meatball</title>
+  <title>Zombie Apocalypse</title>
 </head>
 <body>
 
   <div id="start-page">
     <main>
-      <h1>Title of the game</h1>
+      <h1>Zombie Apocalypse</h1>
       <p>Instructions / Description</p>
       <button id="start">START</button>
     </main>
   </div>
     <div id = "win-page">
       <main>
-        <h1>YOU WIN</h1>
+        <h1>YOU SURVIVED</h1>
       </main>
     </div>
     <div id="lose-page">
