--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
   
+  <script src="js/assets.js"></script>
   <script src="js/player.js"></script>
   <script src="js/enemies.js"></script>
   <script src="js/bullets.js"></script>
