--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <div id="start-page">
     <main>
       <h1>Zombie Apocalypse</h1>
-      <p>Instructions / Description</p>
+      <p>You are one of the last human beings alive after Covid-19 almost erased humanity. 
+        There are a few survivors but you are on your own. You need to kill all the Zombies that 
+        are trying to eat your brain so you can survive another day while the rest of the humanity 
+        is trying to find a cure.</p>
       <button id="start">START</button>
     </main>
   </div>
@@ -28,7 +31,7 @@
   </div>
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
-  
+
   <script src="js/assets.js"></script>
   <script src="js/player.js"></script>
   <script src="js/enemies.js"></script>
