--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <script src="js/player.js"></script>
   <script src="js/enemies.js"></script>
   <script src="js/bullets.js"></script>
+  <script src="js/superboss.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
