--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   <div id="start-page">
     <main>
       <h1>Zombie Apocalypse</h1>
-      <p>You are one of the last human beings alive after Covid-19 almost erased humanity. 
+      <p>You are one of the last human beings alive after zombies almost erased humanity. 
         There are a few survivors but you are on your own. You need to kill all the Zombies that 
-        are trying to eat your brain so you can survive another day while the rest of the humanity 
-        is trying to find a cure.</p>
+        are trying to eat your brain and survive.</p>
       <button id="start">START</button>
     </main>
   </div>
@@ -37,6 +36,7 @@
   <script src="js/enemies.js"></script>
   <script src="js/bullets.js"></script>
   <script src="js/superboss.js"></script>
+  <script src="js/attackSB.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
