--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       <p>You are one of the last human beings alive after zombies almost erased humanity. 
         There are a few survivors but you are on your own. You need to kill all the Zombies that 
         are trying to eat your brain and survive.</p>
+        <div class="keys">
+          <article class="leftsect">
+            <img class="arrowleft" src="/img/arrowleft.png" alt="arrowleft">
+            <h4>Move Left</h4>
+          </article>
+          <article class="rightsect">
+            <img class="arrowright" src="/img/arrowright.png" alt="arrowright">
+            <h4>Move Right</h4>
+          </article>
+          <article>
+            <img class="spacekey" src="/img/space_key_l.png" alt="spacekey">
+            <h4 class="shoot">Shoot</h4> 
+          </article>
+        </div>
       <button id="start">START</button>
     </main>
   </div>
@@ -25,7 +39,7 @@
     </div>
     <div id="lose-page">
     <main>
-      <h1>YOU LOSE SUCKER</h1>
+      <h1>YOU DIED</h1>
     </main>
   </div>
 
@@ -37,6 +51,7 @@
   <script src="js/bullets.js"></script>
   <script src="js/superboss.js"></script>
   <script src="js/attackSB.js"></script>
+  <script src="js/superbossHealth.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
