--- a/index.html
+++ b/index.html
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css"/>
-  <title>Zombie Apocalypse</title>
-</head>
-<body>
-
-  <div id="start-page">
-    <main>
-      <h1>Zombie Apocalypse</h1>
-      <p>You are one of the last human beings alive after zombies almost erased humanity. 
-        There are a few survivors but you are on your own. You need to kill all the Zombies that 
-        are trying to eat your brain and survive.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Zombie Apocalypse</title>
+  </head>
+  <body>
+    <div id="start-page">
+      <main>
+        <h1>Zombie Apocalypse</h1>
+        <p>
+          You are one of the last human beings alive after zombies almost erased
+          humanity. There are a few survivors but you are on your own. You need
+          to kill all the Zombies that are trying to eat your brain and survive.
+        </p>
         <div class="keys">
           <article class="leftsect">
-            <img class="arrowleft" src="/img/arrowleft.png" alt="arrowleft">
+            <img class="arrowleft" src="/img/arrowleft.png" alt="arrowleft" />
             <h4>Move Left</h4>
           </article>
           <article class="rightsect">
-            <img class="arrowright" src="/img/arrowright.png" alt="arrowright">
+            <img class="arrowright" src="/img/arrowright.png" alt="arrowright"/>
             <h4>Move Right</h4>
           </article>
           <article>
-            <img class="spacekey" src="/img/space_key_l.png" alt="spacekey">
-            <h4 class="shoot">Shoot</h4> 
+            <img class="spacekey" src="/img/space_key_l.png" alt="spacekey" />
+            <h4 class="shoot">Shoot</h4>
           </article>
         </div>
-      <button id="start">START</button>
-    </main>
-  </div>
-    <div id = "win-page">
+        <button id="start">START</button>
+      </main>
+    </div>
+    <div id="win-page">
       <main>
         <h1>YOU SURVIVED</h1>
       </main>
     </div>
     <div id="lose-page">
-    <main>
-      <h1>YOU DIED</h1>
-    </main>
-  </div>
+      <main>
+        <h1>YOU DIED</h1>
+      </main>
+    </div>
 
-  <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
+    <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
 
-  <script src="js/assets.js"></script>
-  <script src="js/player.js"></script>
-  <script src="js/enemies.js"></script>
-  <script src="js/bullets.js"></script>
-  <script src="js/superboss.js"></script>
-  <script src="js/attackSB.js"></script>
-  <script src="js/superbossHealth.js"></script>
-  <script src="js/game.js"></script>
-  <script src="js/scripts.js"></script>
-</body>
+    <script src="js/assets.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/enemies.js"></script>
+    <script src="js/bullets.js"></script>
+    <script src="js/superboss.js"></script>
+    <script src="js/attackSB.js"></script>
+    <script src="js/superbossHealth.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
