--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </p>
         <div class="keys">
           <article class="leftsect">
-            <img class="arrowleft" src="/img/arrowleft.png" alt="arrowleft" />
+            <img class="arrowleft" src="../img/arrowleft.png" alt="arrowleft" />
             <h4>Move Left</h4>
           </article>
           <article class="rightsect">
-            <img class="arrowright" src="/img/arrowright.png" alt="arrowright"/>
+            <img class="arrowright" src="../img/arrowright.png" alt="arrowright"/>
             <h4>Move Right</h4>
           </article>
           <article>
-            <img class="spacekey" src="/img/space_key_l.png" alt="spacekey" />
+            <img class="spacekey" src="../img/space_key_l.png" alt="spacekey" />
             <h4 class="shoot">Shoot</h4>
           </article>
         </div>
